--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.boya.jk</groupId>
     <artifactId>demo_jk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>wanxgu</version>
 
 
 </project>
