--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.boya.jk</groupId>
-    <artifactId>demo_jk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>de:mo_jk</artifactId>
+    <version>jiakai</version>
 
 
 </project>
