--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
         <artifactId>mybatis</artifactId>
         <version>3.2.8</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring</artifactId>
+        <version>2.5.6.SEC03</version>
+    </dependency>
 </dependencies>
 
     </dependencyManagement>
